[gd_scene load_steps=3 format=3 uid="uid://c8v6chl2e1ync"]

[ext_resource type="Theme" uid="uid://yqpu1k43isuw" path="res://themes/kenney_rpg.tres" id="1_ugcap"]
[ext_resource type="Script" path="res://scenes/ui/LevelSummaryPanel/LevelSummaryPanel.gd" id="2_xstww"]

[node name="LevelSummaryPanel" type="MarginContainer"]
custom_minimum_size = Vector2(400, 250)
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_top = -400
script = ExtResource("2_xstww")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 250)
offset_top = -400.0
offset_right = 400.0
offset_bottom = -150.0
size_flags_vertical = 0
theme = ExtResource("1_ugcap")
theme_type_variation = &"BeigePaperPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
offset_left = 5.0
offset_top = 6.0
offset_right = 395.0
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
offset_left = 15.0
offset_top = 15.0
offset_right = 375.0
offset_bottom = 226.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
offset_right = 360.0

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 4.0
offset_right = 360.0
offset_bottom = 162.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 166.0
offset_right = 360.0
offset_bottom = 211.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
offset_right = 178.0
offset_bottom = 45.0
size_flags_horizontal = 3

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(140, 45)
offset_left = 19.0
offset_right = 159.0
offset_bottom = 45.0
size_flags_horizontal = 4
shortcut_in_tooltip = false
text = "Restart"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
offset_left = 182.0
offset_right = 360.0
offset_bottom = 45.0
size_flags_horizontal = 3

[node name="NextButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(140, 45)
offset_left = 19.0
offset_right = 159.0
offset_bottom = 45.0
size_flags_horizontal = 4
shortcut_in_tooltip = false
text = "Next"
